--- a/cookbooks/set_hostname/templates/default/hosts.erb
+++ b/cookbooks/set_hostname/templates/default/hosts.erb
@@ -3,6 +3,7 @@
 192.168.33.10 db
 192.168.33.11 solr
 192.168.33.12 ckan
+192.168.33.13 cwp
 
 # The following lines are desirable for IPv6 capable hosts
 ::1     localhost ip6-localhost ip6-loopback
