--- a/cookbooks/set_hostname/templates/default/hosts.erb
+++ b/cookbooks/set_hostname/templates/default/hosts.erb
@@ -4,7 +4,7 @@
 192.168.33.11 solr
 192.168.33.12 ckan
 192.168.33.13 cwp
-192.168.33.14 osqa 
+192.168.33.14 askbot 
 
 # The following lines are desirable for IPv6 capable hosts
 ::1     localhost ip6-localhost ip6-loopback
